# ib-burndown

./: .gitignore  README.md  demo-play.sh  demo-sim.sh  demo.tape  ib_burndown.py  index.html  load.sh  pyproject.toml  requirements.txt  run.sh  tips.json
ib_lookup/: __init__.py  __main__.py  cache.py  cli.py  color.py  layouts.py  overhead.py  parser.py  renderer.py  search.py  trad_cli.py  trad_parser.py
tests/: conftest.py  test_cache.py  test_cli.py  test_color.py  test_layouts.py  test_overhead.py  test_parser.py  test_renderer.py  test_search.py  test_trad.py
