[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ib-lookup"
version = "1.0.0"
description = "EVI01 IB Lookup — search switch connections + map + tips"
requires-python = ">=3.9"
dependencies = [
    "openpyxl",
    "rich",
]

[project.scripts]
ib-lookup = "ib_burndown:main"
