[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-lookup"
version = "1.0.0"
description = "EVI01 IB Lookup — search switch connections + map + tips"
requires-python = ">=3.9"
dependencies = [
    "openpyxl",
    "rich",
]

[tool.setuptools]
py-modules = ["ib_burndown"]

[project.scripts]
ib-lookup = "ib_burndown:main"
