[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-lookup"
version = "2.0.0"
description = "IB Lookup — search InfiniBand switch connections at any site"
requires-python = ">=3.9"
dependencies = [
    "openpyxl",
    "rich",
]

[tool.setuptools.packages.find]
include = ["ib_lookup*"]

[project.scripts]
ib-lookup = "ib_lookup.cli:main"
trad-lookup = "ib_lookup.cli:main"
